
package net;
import "base_msg_struct.proto";
import "error_code.proto";

//-------------斗地主游戏消息---------------------------------------

// 游戏信息
message msg_land_game_info_rep
{
	optional uint32 bomb_count  	= 1; // 炸弹数	
	optional uint32 banker_user 	= 2; // 庄家
	optional uint32 cur_user		= 3; // 当前玩家
	optional uint32 banker_score 	= 4; // 庄家叫分
	optional uint32 turn_winer		= 5; // 出牌玩家
	optional uint32 first_user		= 6; // 第一个玩家
	repeated uint32 turn_card_data  = 7; // 出的牌
	repeated uint32 banker_card		= 8; // 庄家底牌
	repeated uint32 hand_card_count = 9; // 手牌数(大家的手牌数)
	repeated uint32 hand_card_data  = 10;// 手牌(自己的手牌)
	optional uint32 game_state		= 11;//
	optional uint32 wait_time		= 12;// 定时器剩余时间
	repeated uint32 call_score		= 13;// 叫分数目
	repeated uint32 mem_card_mac   = 14; //记牌器
}
// 游戏开始
message msg_land_start_rep
{
	optional uint32 start_user 			= 1;	// 开始玩家
	optional uint32 cur_user   			= 2; 	// 当前玩家
	optional uint32 valid_card_data 	= 3;	// 明牌扑克
	optional uint32 valid_card_index	= 4;	// 明牌位置
	repeated uint32 card_data 			= 5;	// 扑克列表	
}
// 玩家叫分
message msg_land_call_score_req
{
	optional uint32 call_score 	= 1;	// 叫分数目(0,放弃，1 明抓，2 闷抓)	
}
// 玩家叫分
message msg_land_call_score_rep
{
	optional uint32 cur_user	= 1;	// 当前玩家
	optional uint32 call_user	= 2;	// 叫分玩家
	optional uint32 call_score	= 3;	// 	
}
// 请求手牌
message msg_land_req_hand_card_req
{
	optional uint32 chair_id = 1;	
}
// 返回手牌
message msg_land_hand_card_rep
{
	optional uint32 chair_id 	= 1;		
	repeated uint32 card_data 	= 2;	// 扑克列表
}
// 庄家信息
message msg_land_banker_info_rep
{
	optional uint32 banker_user	= 1;	// 庄家玩家
	optional uint32 cur_user	= 2;	// 当前玩家
	optional uint32 call_score  = 3;	// 庄家闷抓
	repeated uint32 banker_card = 4;	// 庄家扑克
	repeated uint32 mem_card_mac   = 5; //记牌器
}
// 玩家出牌
message msg_land_out_card_req
{
	repeated uint32 card_data 		= 1;	// 扑克数据		

}
// 玩家出牌
message msg_land_out_card_rep
{
	optional uint32 cur_user 		= 1;	// 当前玩家
	optional uint32 out_card_user 	= 2;	// 出牌玩家
	repeated uint32 card_data 		= 3;	// 扑克列表
	repeated uint32 mem_card_mac   = 4; //记牌器
}
// 放弃出牌
message msg_land_pass_card_req
{
	optional uint32 reason = 1;	
}
// 放弃出牌
message msg_land_pass_card_rep
{
	optional uint32 turn_over		= 1;	// 一轮结束
	optional uint32 cur_user		= 2;	// 当前玩家
	optional uint32 pass_card_user 	= 3;	// 放弃玩家
}
// 游戏结束
message msg_land_game_over_rep
{
	repeated int64 		scores				= 1;	// 游戏积分		 
	optional uint32 	chun_tian			= 2;	// 春天标志
	optional uint32     fan_chun_tian 		= 3;	// 反春天标志
	optional uint32		bomb_count			= 4;	// 炸弹个数
	repeated uint32		each_bomb_counts	= 5;	// 炸弹个数
	optional uint32		blind 				= 6;	// 闷抓
	repeated uint32		card_counts			= 7;	// 扑克数目
	repeated uint32     hand_card_data		= 8;	// 扑克列表
	repeated msg_cards  all_card_data		= 9;	// 全部扑克
	
}
//匹配用户
message msg_land_marry_player
{

}


//-----------------斗地主游戏消息-----------------------------------




